--- a/employee_management/employee/templates/add_employee.html
+++ b/employee_management/employee/templates/add_employee.html
@@ -1,6 +1,12 @@
-<form method="post">
+{% extends 'base.html' %}
+
+{% block content %}
+<form method="post" class="mt-5 mx-auto w-50 p-4 border rounded bg-light">
     {% csrf_token %}
-    <h2>Add Employee</h2>
+    <h2 class="text-center mb-4">Add Employee</h2>
     {{ form.as_p }}
-    <button type="submit">Save</button>
+    <div class="d-grid">
+        <button type="submit" class="btn btn-primary">Save</button>
+    </div>
 </form>
+{% endblock %}
