--- a/employee_management/employee/templates/login.html
+++ b/employee_management/employee/templates/login.html
@@ -1,9 +1,15 @@
-<form method="post">
+{% extends 'base.html' %}
+
+{% block content %}
+<form method="post" class="mt-5 mx-auto w-50 p-4 border rounded bg-light">
     {% csrf_token %}
-    <h2>Login</h2>
+    <h2 class="text-center mb-4">Login</h2>
     {{ form.as_p }}
-    <button type="submit">Login</button>
+    <div class="d-grid">
+        <button type="submit" class="btn btn-primary">Login</button>
+    </div>
 </form>
-<p>
+<p class="text-center mt-3">
     Don't have an account? <a href="{% url 'signup' %}">Register here</a>.
 </p>
+{% endblock %}
