--- a/employee_management/employee/templates/signup.html
+++ b/employee_management/employee/templates/signup.html
@@ -1,7 +1,15 @@
-<form method="post">
+{% extends 'base.html' %}
+
+{% block content %}
+<form method="post" class="mt-5 mx-auto w-50 p-4 border rounded bg-light">
     {% csrf_token %}
-    <h2>Signup</h2>
+    <h2 class="text-center mb-4">Signup</h2>
     {{ form.as_p }}
-    <button type="submit">Signup</button>
+    <div class="d-grid">
+        <button type="submit" class="btn btn-success">Signup</button>
+    </div>
 </form>
-<a href="/login/">Already have an account? Login</a>
+<p class="text-center mt-3">
+    Already have an account? <a href="{% url 'login' %}">Login</a>.
+</p>
+{% endblock %}
